--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,5 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
     </style>
-
+    <style name="AppTheme.Launcher">
+      <item name="android:windowBackground">@drawable/launch_screen</item>
+    </style>
 </resources>
